--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,55 @@ Companies Section Styling
 /*---------------
 Popular products Styling 
 ------------------*/
+.collection {
+  width: 1000px;
+  margin: 100px auto;
+}
 
-.products-title {
+.collection-title {
+  text-align: center;
+  font-size: 28px;
+  color: #3a3a3a;
+  margin-bottom: 30px;
+}
+.products {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
+.product {
+  width: 300px;
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  padding: 15px;
+}
+.product-image img {
+  width: 300px;
+  height: 255px;
+}
+.product-name {
+  font-size: 28px;
+  font-weight: 500;
+  margin-top: 16px;
+  margin-bottom: 0px;
+}
+.product-price {
+  font-size: 24px;
+  font-weight: 400;
+  margin-top: 6px;
+}
+.product-rating {
+  font-size: 14px;
+}
+.product-rating .fa-star,
+.fa-star-half-alt {
+  color: #fb8200;
+}
+.product-rating .fa-star:last-child,
+.fa-star-half-alt {
+  margin-right: 15px;
+}
+.product-text {
+  color: #787885;
+  font-size: 14px;
 }
