--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,8 @@ main {
   background-color: #e02c6d;
   color: #fff;
   font-weight: bold;
+  text-decoration: none;
+  padding: 10px 25px;
 }
 /*---------------
  Heading styles 
@@ -48,8 +50,6 @@ main {
   background-repeat: no-repeat;
 }
 .prebook-btn {
-  text-decoration: none;
-  padding: 10px 25px;
   border-radius: 25px;
 }
 .prebook-btn i {
@@ -137,4 +137,47 @@ Popular products Styling
 .product-text {
   color: #787885;
   font-size: 14px;
+}
+.button-more {
+  margin-top: 50px;
+  float: right;
+}
+.button-more a {
+  text-decoration: none;
+  color: #e02c6d;
+  font-size: 16px;
+  padding: 5px 15px;
+  transition: all 0.7s ease-out;
+}
+.button-more:hover a {
+  border-bottom: 2px solid #e02c6d;
+  padding: 10px 20px;
+}
+
+/*-------------------
+Induvidual Unique Section
+----------------------*/
+.unique {
+  width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.unique-left {
+  margin-right: 100px;
+}
+.unique-left img {
+  width: 100%;
+}
+
+.tech-title {
+  color: #0a0826;
+  font-size: 38px;
+  margin-bottom: 16px;
+}
+.tech-text {
+  color: #6c6c6c;
+  text-align: start;
+  margin-bottom: 28px;
 }
