--- a/styles/style.css
+++ b/styles/style.css
@@ -181,3 +181,34 @@ Induvidual Unique Section
   text-align: start;
   margin-bottom: 28px;
 }
+
+/*-------------------
+Footer styling
+----------------------*/
+
+.footer {
+  height: 240px;
+  background-color: #0a0826;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.footer-title {
+  text-align: center;
+  font-size: 24px;
+}
+.footer-text,
+.footer-text-1 {
+  text-align: center;
+  font-size: 14px;
+}
+.fab {
+  background-color: rgba(255, 255, 255, 0.205);
+  padding: 5px;
+  border-radius: 50%;
+}
+.fab:not(:last-child) {
+  margin-right: 20px;
+}
