--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,9 @@ main {
   padding: 10px 25px;
   animation: moveInBottom 2s ease-out;
 }
+.btn i {
+  margin-left: 10px;
+}
 /*---------------
  Navigation bar styles 
  -----------------*/
@@ -93,9 +96,6 @@ nav {
 }
 .prebook-btn {
   border-radius: 25px;
-}
-.prebook-btn i {
-  margin-left: 10px;
 }
 
 /*----------------
@@ -240,13 +240,16 @@ Footer styling
 .footer-title {
   text-align: center;
   font-size: 24px;
+  margin-bottom: 0px;
 }
 .footer-text,
 .footer-text-1 {
   text-align: center;
   font-size: 14px;
+  margin-top: 3px;
 }
 .fab {
+  margin-top: 15px;
   background-color: rgba(255, 255, 255, 0.205);
   padding: 5px;
   border-radius: 50%;
