--- a/styles/style.css
+++ b/styles/style.css
@@ -8,11 +8,11 @@ body {
 }
 header {
   height: 80px;
-  width: 1300px;
+  width: 100%;
   margin: 0 auto;
 }
 main {
-  max-width: 1300px;
+  width: 100%;
 }
 .btn {
   background-color: #e02c6d;
@@ -38,7 +38,7 @@ nav {
 .logo-box {
   font-size: 24px;
   font-weight: bold;
-  margin-left: 30px;
+  margin-left: 80px;
 }
 .nav-link {
   display: flex;
@@ -287,5 +287,119 @@ Animation Typing
   100% {
     opacity: 1;
     transform: translate(0);
+  }
+}
+
+/*----------------------------------
+Responsive Designs For Mobile screens
+--------------------------------------*/
+
+@media only screen and (max-width: 688px) {
+  nav {
+    margin: 0px;
+    padding: 0px;
+    justify-content: space-evenly;
+  }
+  .navigation li {
+    margin-left: 10px;
+  }
+  .logo-box {
+    font-size: 18px;
+    margin-left: 30px;
+  }
+  .heading {
+    flex-direction: column-reverse;
+  }
+  .heading-right {
+    margin-top: 80px;
+  }
+  .heading-left {
+    width: 100%;
+    text-align: center;
+  }
+  .heading-title {
+    font-size: 28px;
+  }
+  .companies {
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  .companies div {
+    margin-right: 30px;
+  }
+  .collection {
+    width: 100%;
+  }
+  .products {
+    grid-template-columns: repeat(1, 1fr);
+    grid-row-gap: 15px;
+  }
+  .product {
+    margin: 0 auto;
+    width: 80%;
+  }
+  .product-image img {
+    width: 100%;
+    height: fit-content;
+  }
+  .unique {
+    width: 100%;
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  .unique-left {
+    margin: 10px 30px;
+  }
+  .tech-title {
+    font-size: 24px;
+  }
+  .tech-text {
+    font-size: 14px;
+    text-align: center;
+  }
+}
+/*----------------------------------
+Responsive Designs For Tablet screens
+--------------------------------------*/
+@media only screen and (min-width: 688px) and (max-width: 1100px) {
+  header {
+    height: 40px;
+  }
+  nav {
+    margin: 20px 0px;
+    padding: 0px;
+    justify-content: space-evenly;
+  }
+  .navigation li {
+    margin-left: 10px;
+  }
+  .logo-box {
+    font-size: 18px;
+    margin-left: 0px;
+  }
+  .heading-title {
+    font-size: 40px;
+  }
+  .companies {
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  .collection {
+    width: 100%;
+    margin: 70px auto;
+  }
+  .products {
+    margin-left: 40px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 10px;
+  }
+  .unique {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .tech-text {
+    font-size: 14px;
   }
 }
