--- a/styles/style.css
+++ b/styles/style.css
@@ -20,11 +20,11 @@ main {
   font-weight: bold;
   text-decoration: none;
   padding: 10px 25px;
-  animation: moveInBottom 2s ease-out;
 }
 .btn i {
   margin-left: 10px;
 }
+
 /*---------------
  Navigation bar styles 
  -----------------*/
@@ -75,7 +75,7 @@ nav {
   font-size: 52px;
   color: #3a3a3a;
   margin-bottom: 15px;
-  animation: moveInLeft 1s ease-out;
+  animation: moveInLeft 2s ease-out;
 }
 
 .heading-text {
@@ -96,8 +96,18 @@ nav {
 }
 .prebook-btn {
   border-radius: 25px;
+  animation: moveInBottom 3s ease-out;
+  display: inline-block;
+  transition: all 0.6s ease-in-out;
 }
-
+.prebook-btn:hover {
+  background-color: #fff;
+  color: #e02c6d;
+  border-bottom: 3px solid #e02c6d;
+}
+.prebook-btn:active {
+  transform: translateY(5px);
+}
 /*----------------
  Horizontal line styling 
  ---------------------*/
@@ -171,6 +181,7 @@ Popular products Styling
 .product-rating .fa-star,
 .fa-star-half-alt {
   color: #fb8200;
+  font-size: 14px;
 }
 .product-rating .fa-star:last-child,
 .fa-star-half-alt {
@@ -179,6 +190,7 @@ Popular products Styling
 .product-text {
   color: #787885;
   font-size: 14px;
+  font-weight: 500;
 }
 .button-more {
   margin-top: 50px;
@@ -201,7 +213,7 @@ Induvidual Unique Section
 ----------------------*/
 .unique {
   width: 1000px;
-  margin: 0 auto;
+  margin: 60px auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -222,6 +234,7 @@ Induvidual Unique Section
   color: #6c6c6c;
   text-align: start;
   margin-bottom: 28px;
+  text-align: justify;
 }
 
 /*-------------------
@@ -265,11 +278,11 @@ Animation Typing
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-10rem);
+    transform: translateX(-160px);
   }
 
   80% {
-    transform: translateX(1rem);
+    transform: translateX(16px);
   }
 
   100% {
@@ -281,7 +294,7 @@ Animation Typing
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(3rem);
+    transform: translateY(60px);
   }
 
   100% {
@@ -298,7 +311,7 @@ Responsive Designs For Mobile screens
   nav {
     margin: 0px;
     padding: 0px;
-    justify-content: space-evenly;
+    flex-direction: column;
   }
   .navigation li {
     margin-left: 10px;
@@ -317,9 +330,7 @@ Responsive Designs For Mobile screens
     width: 100%;
     text-align: center;
   }
-  .heading-title {
-    font-size: 28px;
-  }
+
   .companies {
     width: 100%;
     flex-wrap: wrap;
